--- a/devel/py-tenacity/Makefile
+++ b/devel/py-tenacity/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2024/11/11 07:28:24 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2024/12/27 20:53:35 adam Exp $
 
-DISTNAME=	tenacity-8.5.0
+DISTNAME=	tenacity-9.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/tenacity/}
@@ -16,11 +16,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-tornado>=4.5:../../www/py-tornado
 TEST_DEPENDS+=	${PYPKGPREFIX}-typeguard-[0-9]*:../../devel/py-typeguard
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} ${PYTHONBIN} -m unittest discover -v
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
