--- a/net/py-python-socks/Makefile
+++ b/net/py-python-socks/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.18 2024/12/26 09:03:16 adam Exp $
+# $NetBSD: Makefile,v 1.19 2024/12/27 20:57:14 adam Exp $
 
-DISTNAME=	python_socks-2.6.0
+DISTNAME=	python_socks-2.6.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-socks/}
@@ -11,6 +11,7 @@ COMMENT=	Core proxy (SOCKS4, SOCKS5, HTTP tunneling) functionality for Python
 LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TEST_DEPENDS+=	${PYPKGPREFIX}-anyio-[0-9]*:../../devel/py-anyio
 TEST_DEPENDS+=	${PYPKGPREFIX}-flask-[0-9]*:../../www/py-flask
 TEST_DEPENDS+=	${PYPKGPREFIX}-trustme-[0-9]*:../../security/py-trustme
 
