--- a/net/bropages/Makefile
+++ b/net/bropages/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.1 2024/04/10 08:14:06 pin Exp $
+# $NetBSD: Makefile,v 1.2 2024/12/27 21:28:21 pin Exp $
 
 DISTNAME=	bropages-1.41.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=pombadev/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	pin@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/pombadev/bropages/
 COMMENT=	CLI to interact with bropages.org
 LICENSE=	mit
