--- a/x11/py-sip-qt5/Makefile
+++ b/x11/py-sip-qt5/Makefile
@@ -1,20 +1,20 @@
-# $NetBSD: Makefile,v 1.11 2024/11/11 07:29:31 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/27 21:31:55 adam Exp $
 
-DISTNAME=	PyQt5_sip-12.15.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/PyQt5_sip/sip-qt5/}
+DISTNAME=	pyqt5_sip-12.16.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pyqt5_sip/sip-qt5/}
 CATEGORIES=	x11 python
-MASTER_SITES=	${MASTER_SITE_PYPI:=P/PyQt5_sip/}
+MASTER_SITES=	${MASTER_SITE_PYPI:=P/PyQt5-sip/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.riverbankcomputing.com/software/sip/
 COMMENT=	Qt5 support for sip
 LICENSE=	sip-license OR gnu-gpl-v2 OR gnu-gpl-v3
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=30.3:../../devel/py-setuptools
+WHEEL_NAME=	${DISTNAME:S/pyqt/PyQt/}
+
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=69.5:../../devel/py-setuptools
 
 USE_LANGUAGES=	c c++
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
