--- a/sysutils/navi/Makefile
+++ b/sysutils/navi/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.16 2023/12/10 22:12:19 pin Exp $
+# $NetBSD: Makefile,v 1.17 2024/12/27 21:34:33 pin Exp $
 
 DISTNAME=	navi-2.23.0
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=denisidoro/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
 
-MAINTAINER=	pin@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/denisidoro/navi/
 COMMENT=	Interactive cheatsheet tool for the CLI and application launchers
 LICENSE=	apache-2.0
