--- a/www/py-respx/Makefile
+++ b/www/py-respx/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2024/11/11 07:29:26 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2024/12/27 21:36:09 adam Exp $
 
-DISTNAME=	respx-0.21.1
+DISTNAME=	respx-0.22.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/respx/}
@@ -11,11 +11,10 @@ COMMENT=	Utility for mocking out the Python HTTPX library
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-httpx>=0.21.0:../../www/py-httpx
+DEPENDS+=	${PYPKGPREFIX}-httpx>=0.25.0:../../www/py-httpx
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
