--- a/misc/libreoffice/Makefile
+++ b/misc/libreoffice/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.350 2024/12/27 08:20:21 wiz Exp $
+# $NetBSD: Makefile,v 1.351 2024/12/28 00:00:07 ryoon Exp $
 
-VERREL=		24.8.3
+VERREL=		24.8.4
 VERRC=		2
 VER=		${VERREL}.${VERRC}
 DISTNAME=	libreoffice-${VER}
-PKGREVISION=	2
 CATEGORIES=	misc
 MASTER_SITES=	http://download.documentfoundation.org/libreoffice/src/${VERREL}/
 EXTRACT_SUFX=	.tar.xz
@@ -111,11 +110,11 @@ MORE_DISTFILES= \
 	eeb2c7ddf0d302fba4bfc6e97eac9624-libbase-1.1.6.zip \
 	33e1e61fab06a547851ed308b4ffef42-dejavu-fonts-ttf-2.37.zip \
 	f94d9870737518e3b597f9265f4e9803-libserializer-1.1.6.zip \
-	mariadb-connector-c-3.3.11-src.tar.gz \
+	mariadb-connector-c-3.3.13-src.tar.gz \
 	rhino-1.7.14.zip \
 	368f114c078f94214a308a74c7e991bc-crosextrafonts-20130214.tar.gz \
 	language-subtag-registry-2021-08-06.tar.bz2 \
-	postgresql-13.16.tar.bz2 \
+	postgresql-13.18.tar.bz2 \
 	graphite2-minimal-1.3.14.tgz \
 	1725634df4bb3dcb1b2c91a6175f8789-GentiumBasic_1102.zip \
 	EmojiOneColor-SVGinOT-1.3.tar.gz \
@@ -133,8 +132,8 @@ MORE_DISTFILES= \
 	dtoa-20180411.tgz \
 	skia-m116-2ddcf183eb260f63698aa74d1bb380f247ad7ccd.tar.xz \
 	Java-WebSocket-1.5.6.tar.gz \
-	NotoSans-v2.014.zip \
-	NotoSerif-v2.014.zip \
+	NotoSans-v2.015.zip \
+	NotoSerif-v2.015.zip \
 	NotoSansHebrew-v3.001.zip \
 	NotoSansArabic-v2.010.zip \
 	NotoKufiArabic-v2.109.zip \
