--- a/x11/libxfce4windowing/Makefile
+++ b/x11/libxfce4windowing/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2024/12/27 08:20:59 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2024/12/28 08:18:15 wiz Exp $
 
 PKGREVISION=	2
 .include "../../meta-pkgs/xfce4/Makefile.common"
@@ -17,7 +17,7 @@ PKGCONFIG_OVERRIDE+=	libxfce4windowing/libxfce4windowing-0.pc.in
 PKGCONFIG_OVERRIDE+=	libxfce4windowing/libxfce4windowing-x11-0.pc.in
 PKGCONFIG_OVERRIDE+=	libxfce4windowingui/libxfce4windowingui-0.pc.in
 
-BUILD_DEPENDS+=	xfce4-dev-tools>=4.20.0:../../devel/xfce4-dev-tools
+TOOL_DEPENDS+=	xfce4-dev-tools>=4.20.0:../../devel/xfce4-dev-tools
 
 .include "../../devel/meson/build.mk"
 .include "../../devel/gobject-introspection/buildlink3.mk"
