--- a/x11/mcookie/Makefile
+++ b/x11/mcookie/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2019/11/03 09:14:13 rillig Exp $
+# $NetBSD: Makefile,v 1.15 2024/12/28 14:11:29 wiz Exp $
 #
 # Changelog: see
 # https://git.kernel.org/cgit/utils/util-linux/util-linux.git/log/misc-utils/mcookie.c
@@ -7,11 +7,10 @@
 .include "../../devel/libuuid/Makefile.common"
 
 PKGNAME=	${DISTNAME:S/util-linux/mcookie/}
-CATEGORIES=	sysutils
+CATEGORIES=	x11 sysutils
 COMMENT=	Tool for creating cookies for xauth(1)
 LICENSE=	public-domain
 
 CONFIGURE_ARGS+=		--enable-mcookie
-CONFIGURE_ENV.DragonFly+=	ac_cv_type_cpu_set_t=no
 
 .include "../../mk/bsd.pkg.mk"
