--- a/net/qrcp/Makefile
+++ b/net/qrcp/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.11 2024/09/08 16:32:05 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/28 14:52:57 ktnb Exp $
 
-DISTNAME=	0.11.3
+DISTNAME=	0.11.4
 PKGNAME=	qrcp-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=claudiodangelis/}
 DIST_SUBDIR=	qrcp
-GITHUB_TAG=	refs/tags/${DISTNAME}
+GITHUB_TAG=	refs/tags/v${DISTNAME}
 
 MAINTAINER=	ktnb@NetBSD.org
 HOMEPAGE=	https://github.com/claudiodangelis/qrcp/
