--- a/emulators/nono/Makefile
+++ b/emulators/nono/Makefile
@@ -1,9 +1,7 @@
-# $NetBSD: Makefile,v 1.43 2024/12/27 08:19:43 wiz Exp $
+# $NetBSD: Makefile,v 1.44 2024/12/28 19:41:26 jun Exp $
 
-DISTNAME=	nono-1.0.0
-#PKGREVISION=	1
+DISTNAME=	nono-1.1.0
 
-PKGREVISION=	2
 CATEGORIES=	emulators
 MASTER_SITES=	http://www.pastel-flower.jp/~isaki/nono/archive/
 
