--- a/net/slumber/Makefile
+++ b/net/slumber/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2024/11/14 22:21:17 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2024/12/28 22:00:36 pin Exp $
 
-DISTNAME=	slumber-2.3.0
-PKGREVISION=	1
+DISTNAME=	slumber-2.4.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=LucasPickering/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
