--- a/lang/python313/Makefile
+++ b/lang/python313/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2024/12/24 14:22:51 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2024/12/29 08:20:36 wiz Exp $
 
 PKGREVISION=	2
 .include "dist.mk"
@@ -36,6 +36,8 @@ PRINT_PLIST_AWK+=	sub(/.opt-[12].pyc$$/, ".pyo")}
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 USE_CC_FEATURES+=	c11
+# error: initializer element is not constant
+GCC_REQD+=		8
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--enable-shared
 CONFIGURE_ARGS+=	--with-openssl=${BUILDLINK_PREFIX.openssl}
