--- a/devel/py-libusb1/Makefile
+++ b/devel/py-libusb1/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/11/11 07:28:14 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/29 09:06:42 adam Exp $
 
-DISTNAME=	libusb1-3.1.0
+DISTNAME=	libusb1-3.2.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=l/libusb1/}
@@ -13,8 +13,6 @@ LICENSE=	gnu-lgpl-v2
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
