--- a/net/py-ncclient/Makefile
+++ b/net/py-ncclient/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2024/11/11 07:28:49 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2024/12/29 09:34:52 adam Exp $
 
-DISTNAME=	ncclient-0.6.15
+DISTNAME=	ncclient-0.6.16
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/ncclient/}
@@ -14,8 +14,6 @@ DEPENDS+=	${PYPKGPREFIX}-lxml>=3.3.0:../../textproc/py-lxml
 DEPENDS+=	${PYPKGPREFIX}-paramiko>=1.15.0:../../security/py-paramiko
 DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-six-[0-9]*:../../lang/py-six
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 USE_LANGUAGES=	# none
 
