--- a/lang/py-asttokens/Makefile
+++ b/lang/py-asttokens/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.26 2024/11/11 07:28:36 wiz Exp $
+# $NetBSD: Makefile,v 1.27 2024/12/29 09:43:30 adam Exp $
 
-DISTNAME=	asttokens-2.4.1
+DISTNAME=	asttokens-3.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	lang python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/asttokens/}
 
@@ -11,14 +10,11 @@ HOMEPAGE=	https://github.com/gristlabs/asttokens
 COMMENT=	Annotate AST trees with source code positions
 LICENSE=	apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=0:../../devel/py-setuptools_scm
-DEPENDS+=	${PYPKGPREFIX}-six>=1.12.0:../../lang/py-six
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=44:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=3.4.3:../../devel/py-setuptools_scm
 TEST_DEPENDS+=	${PYPKGPREFIX}-astroid-[0-9]*:../../devel/py-astroid
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
