--- a/devel/boost-libs/Makefile
+++ b/devel/boost-libs/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.110 2024/12/26 21:52:48 triaxx Exp $
+# $NetBSD: Makefile,v 1.111 2024/12/29 14:53:13 adam Exp $
 
 BOOST_PACKAGE=		libs
 BOOST_COMMENT=		(binary libraries)
 BOOST_CONFIG=		installed
 BOOST_INSTALL_LIBS=	yes
 
-PKGREVISION= 4
 .include "../../meta-pkgs/boost/Makefile.common"
 
 INSTALLATION_DIRS+=	lib
