--- a/graphics/ruby-clutter-gdk/Makefile
+++ b/graphics/ruby-clutter-gdk/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2024/12/27 08:20:02 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2024/12/29 15:53:08 tsutsui Exp $
 #
 
 DISTNAME=		clutter-gdk-${VERSION}
 COMMENT=		Ruby binding of GDK specific API of Clutter
-PKGREVISION=		3
 CATEGORIES=		graphics
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
