--- a/graphics/ruby-gdk3/Makefile
+++ b/graphics/ruby-gdk3/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2024/12/27 08:20:02 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2024/12/29 15:53:09 tsutsui Exp $
 #
 
 DISTNAME=		gdk3-${VERSION}
 COMMENT=		Ruby binding of GDK3
-PKGREVISION=		3
 CATEGORIES=		graphics
 
 MAINTAINER=		tsutsui@NetBSD.org
