--- a/x11/ruby-gtksourceview3/Makefile
+++ b/x11/ruby-gtksourceview3/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.36 2024/12/27 08:21:04 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2024/12/29 15:53:10 tsutsui Exp $
 #
 
 DISTNAME=		gtksourceview3-${VERSION}
 COMMENT=		Ruby binding of gtksourceview3
-PKGREVISION=		6
 CATEGORIES=		x11
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
