--- a/devel/p5-Specio/Makefile
+++ b/devel/p5-Specio/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.31 2024/11/16 12:05:05 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2024/12/29 16:16:39 wiz Exp $
 
-DISTNAME=	Specio-0.48
+DISTNAME=	Specio-0.49
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/D/DR/DROLSKY/}
 
@@ -11,6 +10,7 @@ HOMEPAGE=	https://metacpan.org/release/Specio
 COMMENT=	Type constraints and coercions for Perl
 LICENSE=	artistic-2.0
 
+DEPENDS+=	p5-Clone-[0-9]*:../../devel/p5-Clone
 DEPENDS+=	p5-Eval-Closure-[0-9]*:../../devel/p5-Eval-Closure
 DEPENDS+=	p5-Role-Tiny>=1.003003:../../devel/p5-Role-Tiny
 DEPENDS+=	p5-MRO-Compat-[0-9]*:../../devel/p5-MRO-Compat
